--- a/package.json
+++ b/package.json
@@ -27,5 +27,9 @@
     "tslib": "^2.3.1",
     "typescript": "^4.5.5"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "node-sass": "^7.0.1",
+    "sass": "^1.49.8"
+  }
 }
