--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@sveltejs/adapter-auto": "next",
     "@sveltejs/kit": "1.0.0-next.278",
+    "@types/lodash": "^4.14.179",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
     "@typescript-eslint/parser": "^5.10.1",
     "eslint": "^7.32.0",
@@ -29,6 +30,7 @@
   },
   "type": "module",
   "dependencies": {
+    "lodash": "^4.17.21",
     "node-sass": "^7.0.1",
     "sass": "^1.49.8"
   }
